--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ json-tricks = "^3.15.5"
 numpy = "^1.20.2"
 matplotlib = "^3.4.2"
 PySimpleGUI = "^4.40.0"
+munch = "^2.5.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
