--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ numpy = "^1.20.2"
 matplotlib = "^3.4.2"
 PySimpleGUI = "^4.40.0"
 munch = "^2.5.0"
+PyVISA-py = "^0.5.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
